--- a/test/index.html
+++ b/test/index.html
@@ -14,37 +14,30 @@
 <body class="height-full">
     <header>
         <div class="">
-            <h1 class="">
-                <img src="https://vscode.github.com/assets/img/github-vscode-icon.svg" alt="GitHub for VS Code"
-                    width="84" height="84">
-            </h1>
+            <h1 class="">Header</h1>
         </div>
     </header>
     <main role="main">
         <div class="">
-            <h1 class="">Success!</h1>
-            <p class="">Authorization was successful. You will be redirected back to Visual Studio
-                Code</p>
+            <h1 class="">Header</h1>
             <div>
-                <h2>Didn't work?</h2>
-                <p>If you aren't redirected, you can add the token manually.</p>
-                <h4>Your authorization token:</h4>
+                <h2>h2</h2>
+                <h4>h4</h4>
+                <p>Paragraph</p>
                 <div class="">
-                    <textarea readonly="" id="">vscode://vscode.github-authentication/did-authenticate?windowId=3&amp;code=91be66815fdd64bdb073&amp;state=9331da63-fbfb-44ff-9f88-4b27f6c03448 </textarea>
-                    <div class=""> ✅ Copied </div>
+                    <textarea readonly="" id="">text</textarea>
                 </div>
                 <ol>
-                    <li>Copy the token. </li>
-                    <li>Switch back to VS code. </li>
-                    <li>Click <b>Signing in to github.com...</b> in the status bar. </li>
-                    <li>Paste the token and hit <b>enter</b>.</li>
+                    <li>List item 1</li>
+                    <li>List item 2</li>
+                    <li>List item 3</li>
                 </ol>
             </div>
         </div>
     </main>
     <footer class="footer">
         <div class="">
-
+            footer
         </div>
     </footer>
 </body>
